--- a/src/content/post/moving-sofa/moving-sofa.mdx
+++ b/src/content/post/moving-sofa/moving-sofa.mdx
@@ -7,7 +7,7 @@ isThought: true
 
 import { Image } from 'astro:assets';
 
-Serioulsy. Who has a two-dimensional sofa?
+Seriously. Who has a two-dimensional sofa?
 
 Related to [Moving sofa problem](https://en.m.wikipedia.org/wiki/Moving_sofa_problem)
 
