--- a/src/content/post/photo-copy/photo-copy.mdx
+++ b/src/content/post/photo-copy/photo-copy.mdx
@@ -5,7 +5,7 @@ customSlug: photo-copy
 isDev: true
 ---
 
-`photo-copy` is a simple project to copy images from a folder to another. And also to sort them througth a GUI.
+`photo-copy` is a simple project to copy images from a folder to another. And also to sort them through a GUI.
 
 Its main use is to sort images from a camera or phone to your computer.
 
