--- a/src/content/post/specific-sport-application/specific-sport-application.mdx
+++ b/src/content/post/specific-sport-application/specific-sport-application.mdx
@@ -17,7 +17,7 @@ import Img from "./sport-application.jpg"
 
 - Always push the user to pay for premium features in the app.
 
-- Auto-stop by default when recording an activity ? Whitout auto-(re)start ?! Really ?!
+- Auto-stop by default when recording an activity ? Without auto-(re)start ?! Really ?!
 
 - Doesn't know how to [use GPS properly](https://n4n5.dev/sportiva/activity/9222545148/).
 
