--- a/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
+++ b/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
@@ -227,7 +227,7 @@ import LogoSnax from "./logo_snax.png"
 
 ## <CustomImg src={LogoSnax}>Snax</CustomImg>
 
-<Website job={"Director/Head of website departement"}>https://snax.rezel.net</Website>
+<Website job={"Director/Head of website department"}>https://snax.rezel.net</Website>
 
 Snax is the legendary club with countless departments.
 
