--- a/src/content/post/tool-blocks/tool-blocks.mdx
+++ b/src/content/post/tool-blocks/tool-blocks.mdx
@@ -7,7 +7,7 @@ isDev: true
 
 **tool-blocks** : the toolbox made of blocks
 
-The idea behing tool-blocks is to provide two things:
+The idea behind tool-blocks is to provide two things:
 
 - the primary block which is the base of the toolbox, it handles how blocks are installed, managed, displayed and updated
 - a set of basic blocks that can act as tools and demo
