--- a/src/content/post/figer.mdx
+++ b/src/content/post/figer.mdx
@@ -6,7 +6,7 @@ isDev: true
 
 In a context of multi-user on same session, it is sometimes useful to have a way to freeze some files on the system - for the current user. This is what `figer` does.
 
-First you tell wich files you want to freeze. Then you can freeze them, change user, unfreeze files of the new user, etc...
+First you tell which files you want to freeze. Then you can freeze them, change user, unfreeze files of the new user, etc...
 
 
 ---
