--- a/src/content/post/prague-trip/prague-trip.mdx
+++ b/src/content/post/prague-trip/prague-trip.mdx
@@ -14,5 +14,5 @@ One week course on `CTU13: Company Crisis` at Czech Technical University in Prag
 import MapPoints from "../../../components/MapPoints.astro"
 import points from "../../../assets/prague-trip/records.json"
 
-<MapPoints points={points} height={400} />
+<MapPoints points={points} height={400} view={[50.08, 14.42]}/>
 
