--- a/src/content/post/warsaw-trip/warsaw-trip.mdx
+++ b/src/content/post/warsaw-trip/warsaw-trip.mdx
@@ -14,7 +14,7 @@ One week course on `WUT10: Sound: Hearing and Acoustical Measurements` at Warsaw
 import MapPoints from "../../../components/MapPoints.astro"
 import points from "../../../assets/warsaw-trip/records.json"
 
-<MapPoints points={points} height={400} />
+<MapPoints points={points} height={400} view={[52.22, 21.0]}/>
 
 <br />
 
