add Though components

--- a/src/content/post/canada-trip/canada-trip.mdx
+++ b/src/content/post/canada-trip/canada-trip.mdx
@@ -207,7 +207,15 @@ import AutoTable from "../../../components/AutoTable.astro"
 <details>
 <summary>Bixi (https://bixi.com/) data:</summary>
 
-> note: I should have used the monthly pass, I think it would have been cheaper.
+<br/>
+
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
+note: I should have used the monthly pass, I think it would have been cheaper.
+</Thought>
+
+<br/>
 
 <AutoTable data={BixiData} />
 
