--- a/src/content/post/climbing-shoes/climbing-shoes.mdx
+++ b/src/content/post/climbing-shoes/climbing-shoes.mdx
@@ -1,15 +1,22 @@
 ---
 title: "Climbing Shoes"
 publishDate: 2023-07-07
+customSlug: climbing-shoes
 isThought: true
 ---
 
 Fact: Climbing shoes smell.
 
+
+import Thought from "../../../components/Thought.astro"
+
+
 <br/>
 <br/>
 
+<Thought>
 New product idea: UV sterilizer for climbing shoes
+</Thought>
 
 
 <br/>
@@ -18,9 +25,7 @@ New product idea: UV sterilizer for climbing shoes
 [@climbUp](https://www.climb-up.fr/) ?
 [@arkose](https://arkose.com/) ?
 
-Just put that into the changing room
-
-(or at least just a spray)
+Just put that into the changing room (or at least just a spray)
 
 ---
 
@@ -28,4 +33,6 @@ Just put that into the changing room
 <br/>
 <br/>
 
+<Thought>
 Was just searching for UV-C sanitizers...
+</Thought>
