--- a/src/content/post/cv-as-a-json/cv-as-a-json.mdx
+++ b/src/content/post/cv-as-a-json/cv-as-a-json.mdx
@@ -1,7 +1,8 @@
 ---
 title: CV as a JSON
 publishDate: 2024-02-01
-updatedDate: 2024-11-10
+updatedDate: 2025-01-01
+customSlug: cv-as-a-json
 isDev: true
 ---
 
@@ -17,12 +18,20 @@ repo is here: https://github.com/Its-Just-Nans/curriculum-vitae
 
 ---
 
-yes, my cv is now a json file (+ a picture if needed).
+import Thought from "../../../components/Thought.astro";
 
----
+<Thought>
+yes, my cv is now a json file (+ a picture if needed).
+</Thought>
 
 ## Edit 2024-11
 
 the script is now single-file and self invoking itself inside `lualatex`
 
-`how *fun* ?`
+<Thought>
+how **fun** ?
+</Thought>
+
+## Edit 2025-01-01
+
+It's now a `luarocks` package! Because why not?
