--- a/src/content/post/ffmpeg-cropper/ffmpeg-cropper.mdx
+++ b/src/content/post/ffmpeg-cropper/ffmpeg-cropper.mdx
@@ -2,21 +2,26 @@
 title: ffmpeg cropper
 publishDate: 2024-03-10
 updatedDate: 2024-12-13
+customSlug: ffmpeg-cropper
 isDev: true
 ---
 
-Ever add a ffmpeg video that you want to crop?
 
-But it's a pain to do have the right crop filter?
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
+Ever add a ffmpeg video that you wanted to crop?
+
+But it's a pain to do have the right crop filter 😟?
+</Thought>
 
 
 Introducing [ffmpeg-cropper](https://n4n5.dev/ffmpeg-cropper/). Drag and drop your video and select the crop area. The tool will generate the ffmpeg filter for you (you can even play the video to check if the crop is correct).
 
----
+Links:
 
-https://n4n5.dev/ffmpeg-cropper/
-
-https://github.com/Its-Just-Nans/ffmpeg-cropper
+- https://n4n5.dev/ffmpeg-cropper/
+- https://github.com/Its-Just-Nans/ffmpeg-cropper
 
 ---
 
