--- a/src/content/post/moving-sofa/moving-sofa.mdx
+++ b/src/content/post/moving-sofa/moving-sofa.mdx
@@ -7,7 +7,11 @@ isThought: true
 
 import { Image } from 'astro:assets';
 
-Seriously. Who has a two-dimensional sofa?
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
+Seriously. Who has a **two-dimensional sofa**?
+</Thought>
 
 Related to [Moving sofa problem](https://en.m.wikipedia.org/wiki/Moving_sofa_problem)
 
