--- a/src/content/post/pngtools/pngtools.mdx
+++ b/src/content/post/pngtools/pngtools.mdx
@@ -13,7 +13,7 @@ It only supports a subset of the PNG format, but it can:
 - recover a PNG from the https://en.wikipedia.org/wiki/ACropalypse (CVE 2023-21036) vulnerability.
 - convert the png to bitmap file
 
-## Links
+Links
 
 - https://github.com/Its-Just-Nans/pngtools
 - https://its-just-nans.github.io/packages/
