--- a/src/content/post/prague-trip/prague-trip.mdx
+++ b/src/content/post/prague-trip/prague-trip.mdx
@@ -5,9 +5,10 @@ customSlug: prague-trip
 isSchool: true
 ---
 
+> Trip from 2022-11-12 to 2022-11-19
+
 [Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
 
-Trip from 2022-11-12 to 2022-11-19
 
 One week course on `CTU13: Company Crisis` at Czech Technical University in Prague.
 
