--- a/src/content/post/rail-pass/rail-pass.mdx
+++ b/src/content/post/rail-pass/rail-pass.mdx
@@ -27,9 +27,11 @@ Le Pass Rail est un dispositif financé par l'État et les Régions pour permett
 ```
 
 
-Positive aspects:
+import Thought from "../../../components/Thought.astro"
 
-- Unlimited (free) travel
+<Thought>
+Positive aspects: (almost) unlimited (free) travel!
+</Thought>
 
 ---
 
@@ -85,7 +87,11 @@ Conclusion
 
 (There's no reason to restrict this since tickets are free with the pass.)
 
-Another question: Why is the pass limited to the summer only?
+<Thought>
+Another question:
+
+Why is the pass limited to the summer only?
+</Thought>
 
 ---
 
@@ -104,7 +110,9 @@ import Img from "./pass_rail.jpg"
 
 ---
 
+<Thought>
 Introducing [rail-planner](https://github.com/Its-Just-Nans/rail-planner), based on open data of SNCF
+</Thought>
 
 <div style="text-align:center">
     <iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/ejOBlQpqYyA?si=Ea8ei2OzWTeIzYZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
