--- a/src/content/post/rezel/rezel.mdx
+++ b/src/content/post/rezel/rezel.mdx
@@ -5,12 +5,16 @@ customSlug: rezel
 isThought: true
 ---
 
-Rezel is an association that provides services for Télécom Paris associations and students (cloud storage, communication, web hosting, etc.).
-
-See more at https://rezel.net/
+Rezel is an association that provides services for Télécom Paris associations and students (cloud storage, communication, web hosting, etc.). See more at https://rezel.net/
 
 
-They are also an ISP (Internet Service Provider) - https://fai.rezel.net/!
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
+They are also an ISP (Internet Service Provider)!
+
+Check more at https://fai.rezel.net/
+</Thought>
 
 Here are my Rezel membership dates:
 
