--- a/src/content/post/static-url-shortener/static-url-shortener.mdx
+++ b/src/content/post/static-url-shortener/static-url-shortener.mdx
@@ -23,4 +23,8 @@ Links
 
 ---
 
+import Thought from "../../../components/Thought.astro";
+
+<Thought>
 New idea just dropped: what about generating PHP files with astro ? 🤔
+</Thought>
