--- a/src/content/post/thales-tutored-project/thales-tutored-project.mdx
+++ b/src/content/post/thales-tutored-project/thales-tutored-project.mdx
@@ -6,7 +6,7 @@ isSchool: true
 isDev: true
 ---
 
-> Tutored Project with Thales Alenia Space
+> Tutored Project with Thales Alenia Space. From 2020-04 to 2021-06
 
 The project (made in group of 6) was to update a moving robot and adapt a spacial Camera (ToF - Time Of Flight) to it.
 
@@ -24,7 +24,6 @@ Links:
 - https://youtu.be/Xz0L6iHNSwA - presentation of the project
 - https://github.com/Its-Just-Nans/thales-project
 
-From 2020-04 to 2021-06
 
 ---
 
