--- a/src/content/post/the-wheel/the-wheel.mdx
+++ b/src/content/post/the-wheel/the-wheel.mdx
@@ -1,13 +1,17 @@
 ---
 title: Reinventing the wheel
 publishDate: 2020-09-22
+customSlug: the-wheel
 isThought: true
 ---
 
 Seen a lot on stackoverflow (and elsewhere): "Don't reinvent the wheel".
 
+import Thought from "../../../components/Thought.astro"
 
+<Thought>
 "Si on ne réinvente pas la roue, on ne peut pas l'améliorer"
+</Thought>
 
 If you reinvent a concept, you can understand it better.
 
