--- a/src/content/post/tocs/tocs.mdx
+++ b/src/content/post/tocs/tocs.mdx
@@ -9,7 +9,11 @@ TOCS means the "Trophée des objets connectés" (Trophy of connected objects).
 
 I finished the TOCS by winning the Jury Prize with the presentation of my CyberDeck (in plexiglass).
 
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
 Great fablab people at https://www.sofab.tv/
+</Thought>
 
 See more at:
 
