--- a/src/content/post/tramex/tramex.mdx
+++ b/src/content/post/tramex/tramex.mdx
@@ -2,6 +2,7 @@
 title: tramex
 publishDate: 2024-06-15
 updatedDate: 2024-12-13
+customSlug: tramex
 isSchool: true
 isDev: true
 ---
@@ -14,7 +15,11 @@ Tramex is a project that serves the goal of allowing users to analyze and visual
 
 ---
 
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
 Tiny proxy (https://github.com/Its-Just-Nans/proxy-ws) used during development because of some issues because of CORS (https://tramex.github.io/tramex/docs/knowledge_base.html#cors-errors)
+</Thought>
 
 ---
 
