--- a/src/content/post/warsaw-trip/warsaw-trip.mdx
+++ b/src/content/post/warsaw-trip/warsaw-trip.mdx
@@ -5,9 +5,9 @@ customSlug: warsaw-trip
 isSchool: true
 ---
 
-[Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
+> Trip from 2023-11-18 to 2023-11-25
 
-Trip from 2023-11-18 to 2023-11-25
+[Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
 
 One week course on `WUT10: Sound: Hearing and Acoustical Measurements` at Warsaw University of Technology.
 
