--- a/src/content/post/website-for-rt/website-for-rt.mdx
+++ b/src/content/post/website-for-rt/website-for-rt.mdx
@@ -9,7 +9,11 @@ Website for R&T (Networks and Telecommunications) students
 
 This website aims to assist R&T students throughout their coursework.
 
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
 It was created on my free time, starting from scratch.
+</Thought>
 
 All the code is available in a GitHub repository (to which it is linked): https://github.com/Its-Just-Nans/rt/
 
