--- a/src/content/post/halting-problem/halting-problem.mdx
+++ b/src/content/post/halting-problem/halting-problem.mdx
@@ -1,6 +1,7 @@
 ---
 title: Halting problem
 publishDate: 2023-09-17
+customSlug: halting-problem
 isThought: true
 ---
 
@@ -10,4 +11,8 @@ then check this out
 
 https://github.com/Its-Just-Nans/halting-problem
 
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
 And now ? What are you going to do ?
+</Thought>
