--- a/src/content/post/music-exporter/music-exporter.mdx
+++ b/src/content/post/music-exporter/music-exporter.mdx
@@ -7,7 +7,10 @@ isDev: true
 
 Save your music from Spotify, Youtube (and maybe more providers).
 
+Link
+
 - https://github.com/Its-Just-Nans/music-exporter
+- https://crates.io/crates/music-exporter
 
 ---
 
