--- a/src/content/post/housing.mdx
+++ b/src/content/post/housing.mdx
@@ -20,6 +20,10 @@ https://lamaisonena.com/
 
 https://peregrinusmundi.com/habitat-reversible/
 
+## Paille porteuse
+
+https://www.youtube.com/watch?v=Dx2Ctthz63A
+
 ## Links
 
 - https://larchipelle.fr/
