--- a/src/content/post/housing/housing.mdx
+++ b/src/content/post/housing/housing.mdx
@@ -4,6 +4,8 @@ publishDate: ""
 hidden: true
 ---
 
+import { Image } from "astro:assets";
+
 
 https://fr.wikipedia.org/wiki/NF_C_15-100
 
@@ -16,9 +18,9 @@ https://www.youtube.com/watch?v=sXr1QmmD_mQ
 
 ## La maison en A
 
-https://lamaisonena.com/
-
-https://peregrinusmundi.com/habitat-reversible/
+- https://lamaisonena.com/
+- https://www.youtube.com/watch?v=bBf3Sniwfqw movie
+- https://peregrinusmundi.com/habitat-reversible/ similar project
 
 ## Paille porteuse
 
@@ -56,3 +58,11 @@ Perimètre architécture de France (500m)
 Taxe aménagement
 Taxe de racordement à l'égout PFAC
 Etude du sol (micropieux) étude de sol G1
+
+
+import EcoQuartier from './ecoquartier.jpg'
+
+<Image src={EcoQuartier} alt="EcoQuartier" />
+
+> Caption :
+> Not created by me
