--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -190,6 +190,7 @@ hidden: true
 -   https://isuckatcs.github.io/how-to-compile-your-language/
 -   http://zlethic.com/
 -   https://endesga.xyz/
+-   https://www.youtube.com/watch?v=juWM6saNCZk - Why is C Compiler So Smart?
 
 ## tools
 
