move links from golb

--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -162,7 +162,7 @@ hidden: true
 -   https://www.arp242.net/ - blog
 -   https://www.icaria.de/ - blog - security
 -   https://jameshfisher.com/
--   https://wiki.osdev.org/
+-   https://wiki.osdev.org/ - osdev wiki
 -   https://cure53.de/ - pentest reports
 -   https://github.com/bregman-arie/devops-exercises
 -   https://digitalattackmap.com/ - DDoS map
@@ -191,9 +191,18 @@ hidden: true
 -   http://zlethic.com/
 -   https://endesga.xyz/
 -   https://www.youtube.com/watch?v=juWM6saNCZk - Why is C Compiler So Smart?
+-   https://www.jezzamon.com/fourier/
+-   https://vincmazet.github.io/ - teaching stuff with clean explanations and visualizations
+-   https://gcher.com/posts/ - blog
+-   https://github.com/inputsh/awesome-c - projects in C
+-   https://www.youtube.com/@Reducible - how some things work
+-   https://www.bibmath.net/ - math
+-   https://www.youtube.com/watch?v=oz9cEqFynHU - data structures and algorithms in 15 minutes
+
 
 ## tools
 
+-   https://falstad.com/circuit/ - electronic circuit simulator
 -   https://github.com/luigifcruz/CyberEther
 -   https://whatsmyname.app/
 -   https://remonterletemps.ign.fr/
@@ -301,3 +310,4 @@ hidden: true
 -   https://www.societe.ninja/
 -   https://www.jurisprudence.ninja/
 -   https://recomedicales.fr/ - medecine
+-   https://ib.bioninja.com.au/
