--- a/src/content/post/itachi/itachi.mdx
+++ b/src/content/post/itachi/itachi.mdx
@@ -9,7 +9,7 @@ hidden: true
 >
 > **"Shadow's Burden" - Itachi Rap**
 
-###  *(🎵 Intro - Whispered Thought 🎵)*
+###  *(Intro - Whispered Thought)*
 
 *"The village first, that was my creed...*
 
