--- a/src/content/post/sms2call/sms2call.mdx
+++ b/src/content/post/sms2call/sms2call.mdx
@@ -10,7 +10,7 @@ sms2call is a tiny tool to call a number from an SMS.
 import Thought from "../../../components/Thought.astro"
 
 <Thought>
-Not my first app but the first one I'm publishing.
+Not my first app but the first one I'm publishing!
 </Thought>
 
 This app can have a lot of use cases, for example, it's a simple automation tool.
