--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -199,10 +199,11 @@ isThought: true
 -   https://www.youtube.com/@Reducible - how some things work
 -   https://www.bibmath.net/ - math
 -   https://www.youtube.com/watch?v=oz9cEqFynHU - data structures and algorithms in 15 minutes
-
+-   https://www.server-world.info/en/ - server configuration
 
 ## tools
 
+-   https://ceph.io/ - distributed storage
 -   https://falstad.com/circuit/ - electronic circuit simulator
 -   https://github.com/luigifcruz/CyberEther
 -   https://whatsmyname.app/
