--- a/src/content/post/jscontact/jscontact.mdx
+++ b/src/content/post/jscontact/jscontact.mdx
@@ -7,9 +7,17 @@ isDev: true
 
 `jscontact` is a lib implementing the RFC 9553 (https://www.rfc-editor.org/rfc/rfc9553.html).
 
+import Thought from "../../../components/Thought.astro"
+
+<Thought>
+
 Discovered and submitted some erratas: https://www.rfc-editor.org/errata/rfc9553
 
+<br />
+
 Discovered the https://mailarchive.ietf.org/arch/browse/calsify/ mail list
+
+</Thought>
 
 Links:
 
