--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -7,6 +7,12 @@ isThought: true
 
 > Note: link aren't shorted
 
+## to check
+
+-   https://www.yoctoproject.org/
+-   https://www.openembedded.org/
+-   https://buildroot.org/
+
 ## cool project
 
 -   https://github.com/rerun-io/rerun
