--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -12,20 +12,17 @@ isThought: true
 -   https://www.yoctoproject.org/
 -   https://www.openembedded.org/
 -   https://buildroot.org/
+-   https://tinytapeout.com/
 
 ## cool project
 
 -   https://github.com/rerun-io/rerun
--   https://github.com/gfx-rs/wgpu
 -   http://www.elm-chan.org/fsw/tjpgd/00index.html
--   https://github.com/itszor/gcc-6502
 -   https://github.com/adafruit/Adafruit_ILI9341
--   https://tinytapeout.com/
 -   https://github.com/juspay/hyperswitch
 -   https://github.com/CADmium-Co/CADmium
 -   https://github.com/vosen/ZLUDA - CUDA for AMD
 -   https://www.aaaaaaaaaa.org/
--   https://www.byran.ee/
 -   https://atomicsemi.com/
 
 ## Design
@@ -61,6 +58,23 @@ isThought: true
 -   https://eyecannndy.com/ - video transitions
 -   https://www.analogue.co/ - video game console
 
+## CTFs
+
+- https://crackmes.one/ - reverse
+- https://www.newbiecontest.org/
+- https://www.root-me.org/
+- https://microcorruption.com/ - pwn / iot
+- https://ctf101.org/ - documentation
+- https://www.hackthebox.com/ - pentest
+- https://cryptohack.org/
+- https://www.newbiecontest.org/
+- http://www.france-ioi.org/
+- https://fotoforensics.com/
+- https://france-cybersecurity-challenge.fr/
+- https://www.nops.re/
+- https://ph0wn.org/ smart devices
+- https://www.dghack.fr/
+
 ## reading
 
 -   https://browser.engineering/ - web browser engine
@@ -84,6 +98,7 @@ isThought: true
 -   https://hoodmaps.com/
 -   https://makelinux.github.io/kernel/map/ - Linux kernel map
 -   https://sergioprado.blog/
+-   https://www.byran.ee/
 -   https://devhints.io/ - cheatsheets
 -   https://learngitbranching.js.org/ - learn git
 -   https://tigyog.app/ - revolutionize learning?
@@ -258,18 +273,10 @@ isThought: true
 -   https://github.com/daybrush/scenejs-render - movie with css
 -   https://github.com/Z4nzu/hackingtool - ALL IN ONE Hacking Tool For Hackers
 -   https://github.com/MatrixTM/MHDDoS - DDoS Attack Script Python3
--   https://www.hackthebox.com/
--   https://www.root-me.org/
--   https://cryptohack.org/
--   https://www.newbiecontest.org/
--   https://france-cybersecurity-challenge.fr/
--   http://www.france-ioi.org/
--   https://fotoforensics.com/
 -   https://github.com/greiman/SdFat
 -   https://apilevels.com/ - android API levels
 -   https://github.com/bloomberg/memray - python memory profiler
 -   https://githistory.xyz/ - view git history
--   https://github.com/andrewrk/poop - performance optimizer observation platform
 -   https://github.com/lycheeverse/lychee - link checker
 -   https://it-tools.tech/ - IT tools
 -   https://gchq.github.io/CyberChef/ - tools
