--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -13,6 +13,7 @@ isThought: true
 - https://www.openembedded.org/
 - https://buildroot.org/
 - https://tinytapeout.com/
+- https://developers.google.com/silicon
 
 ## cool project
 
@@ -102,6 +103,7 @@ isThought: true
 - https://www.thetruesize.com/ - true size of countries
 - https://python-charts.com/ - which python chart to use
 - https://natureofcode.com/
+- https://dkwcs.com/ - DK YOO
 - https://sha256algorithm.com/ - sha256 algorithm visualized
 - https://www.jeux-geographiques.com
 - http://elm-chan.org/he_e.html
@@ -118,6 +120,7 @@ isThought: true
 - https://www.youtube.com/playlist?list=PLCwXWOyIR22veT31gK5JwmqxuVc0Uoy8a - Voyage au pays des maths
 - https://www.youtube.com/playlist?list=PLSFF03yVNdA6bGYAUyLYRopM2bZbyJuQE - Le coeur a ses raisons saison 2
 - https://www.youtube.com/watch?v=BieAw6lwntU - Just use Matrix.
+- https://www.youtube.com/watch?v=OAH0MoAv2CI - Cuts & Transitions 101
 - https://makefiletutorial.com/
 - https://github.com/cnlohr/minimdnsd/
 - https://thecopenhagenbook.com/ - guideline for auth in web applications
