--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -74,6 +74,7 @@ isThought: true
 - https://www.nops.re/
 - https://ph0wn.org/ - smart devices
 - https://www.dghack.fr/
+- https://insomnihack.ch/
 
 ## reading
 
@@ -187,6 +188,7 @@ isThought: true
 - https://infovisual.info/ - schemas
 - https://lwn.net/ - Linux Weekly News and FOSS
 - https://missing.csail.mit.edu/ - missing CS semester
+- https://www.c-language.org/ - C language
 - https://wiki.mozilla.org/Areweyet
 - https://c-git.github.io/
 - https://paroj.github.io/gltut/ - modern 3D graphics programming
