move some links

--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -57,6 +57,7 @@ isThought: true
 - https://michelamazonka.com/
 - https://eyecannndy.com/ - video transitions
 - https://www.analogue.co/ - video game console
+- https://mcresourcepile.github.io/ - minecraft PvP maps
 
 ## CTFs
 
@@ -134,6 +135,7 @@ isThought: true
 - https://signal.org/docs/specifications/x3dh/
 - https://signal.org/docs/specifications/sesame/
 - https://github.com/amilajack/reading
+- https://letsencrypt.org/getting-started/ - Learn about SSL
 - https://musclewiki.com/
 - https://xkcd.com/radiation/ - radiation chart
 - https://github.com/Spirit532/studio_mic - build a studio microphone
@@ -201,6 +203,7 @@ isThought: true
 - https://www.bibmath.net/ - math
 - https://www.youtube.com/watch?v=oz9cEqFynHU - data structures and algorithms in 15 minutes
 - https://www.server-world.info/en/ - server configuration
+- https://www.learndmarc.com/ - DMARC
 
 ### blog
 
@@ -242,10 +245,8 @@ isThought: true
 - https://web-check.xyz/ - check website
 - https://pikimov.com/ - online motion design and video editor
 - https://carto.graou.info/ - train map
-- https://www.learndmarc.com/ - DMARC
 - https://dmarcchecker.app/ - DMARC, DKIM, SPF
 - https://cobalt.tools/ - downloader
-- https://mcresourcepile.github.io/ - minecraft PvP maps
 - https://github.com/saulpw/visidata - terminal spreadsheet multitool
 - https://csswizardry.com/ct/ - analyze your `<head>`
 - https://godbolt.org/ - compiler explorer
@@ -273,10 +274,9 @@ isThought: true
 - https://carbon.now.sh/ - display code as image
 - https://www.piliapp.com/ - many useful tools
 - https://github.com/0xsyr0/OSCP - cheat sheet
-- https://travelboast.com/fr/ - show people your trip
+- https://travelboast.com/ - show people your trip
 - https://www.beeper.com/ - all your chats in one app
 - https://github.com/sickcodes/Docker-OSX - run macOS VM in a Docker
-- https://letsencrypt.org/getting-started/
 - https://www.alwaysdata.com/ - hosting
 - https://www.mcrpg.com/kohi-click-test/ - minecrafter test
 - https://github.com/daybrush/scenejs-render - movie with css
