--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -59,7 +59,7 @@ isThought: true
 - https://www.analogue.co/ - video game console
 - https://mcresourcepile.github.io/ - minecraft PvP maps
 
-## CTFs
+## CTFs and cybersecurity
 
 - https://crackmes.one/ - reverse
 - https://www.newbiecontest.org/
@@ -76,6 +76,8 @@ isThought: true
 - https://ph0wn.org/ - smart devices
 - https://www.dghack.fr/
 - https://insomnihack.ch/
+- https://owasp.org/
+- https://www.hackerone.com/
 
 ## reading
 
