--- a/src/content/post/links.mdx
+++ b/src/content/post/links.mdx
@@ -241,6 +241,7 @@ isThought: true
 - https://github.com/luigifcruz/CyberEther
 - https://whatsmyname.app/
 - https://remonterletemps.ign.fr/
+- https://sailboat.guide/ - sailboat guide
 - https://selfh.st/apps/ - self hosted apps
 - http://www.elm-chan.org/fsw/tjpgd/00index.html
 - https://tldr.inbrowser.app/ - tldr in browser
