--- a/src/content/post/boat-license/boat-license.mdx
+++ b/src/content/post/boat-license/boat-license.mdx
@@ -22,10 +22,30 @@ draft: true
 | Permis côtier  | Hauturier                         |
 | Permis fluvial | Grande plaisance eaux intérieures |
 
+
+Great website for blank exams: https://www.loisirs-nautic.fr/
+
+### Permis côtier
+
 Useful links for self-study:
 
 - https://www.youtube.com/watch?v=obQx1IkVLsU
 - https://www.youtube.com/watch?v=MvjVB9CMn7Y
 - https://www.youtube.com/watch?v=BmzW14K9abI&list=PLyHWd4LxGoS8cdwh0unZXqVA3AqHoeDPU
 
-Great website for blank exams: https://www.loisirs-nautic.fr/
+### Permis hauturier
+
+| Equipment     | Price |
+|---------------|-------|
+| Map           | 40€   |
+| Regle de Cras | 20€   |
+| Compas        | 20€   |
+
+## Others
+
+- https://www.recyclermonbateau.fr/
+- https://www.vesselfinder.com/
+- https://www.marinetraffic.com/
+- https://www.windy.com/
+- https://fr.windfinder.com/
+- https://www.navily.com/
